[gd_scene load_steps=11 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Node.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 3, 3 )

[sub_resource type="RectangleShape2D" id=4]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 3, 3 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 3, 3 )

[sub_resource type="RectangleShape2D" id=5]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 3, 3 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 3, 3 )

[node name="Node" type="Node2D"]
script = ExtResource( 2 )

[node name="BeginPlay" type="Area2D" parent="."]
position = Vector2( -17, -15 )

[node name="SprBeginPlay" type="Sprite" parent="BeginPlay"]
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )

[node name="ColBeginPlay" type="CollisionShape2D" parent="BeginPlay"]
shape = SubResource( 1 )

[node name="StartBeginPlay" type="Area2D" parent="BeginPlay"]
position = Vector2( 9, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="SprStartBeginPlay" type="Sprite" parent="BeginPlay/StartBeginPlay"]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="ColStartBeginPlay" type="CollisionShape2D" parent="BeginPlay/StartBeginPlay"]
shape = SubResource( 2 )

[node name="LineBeginPlay" type="Line2D" parent="BeginPlay/StartBeginPlay"]
points = PoolVector2Array( 0, 0, 0, 0 )
width = 1.0
default_color = Color( 1, 1, 1, 1 )

[node name="SpawnActor" type="Area2D" parent="."]
position = Vector2( 18, -15 )

[node name="SprSpawnActor" type="Sprite" parent="SpawnActor"]
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )

[node name="ColSpawnActor" type="CollisionShape2D" parent="SpawnActor"]
shape = SubResource( 4 )

[node name="StartSpawnActor" type="Area2D" parent="SpawnActor"]
position = Vector2( 9, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="SprStartSpawnActor" type="Sprite" parent="SpawnActor/StartSpawnActor"]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="ColStartSpawnActor" type="CollisionShape2D" parent="SpawnActor/StartSpawnActor"]
shape = SubResource( 6 )

[node name="LineSpawnActor" type="Line2D" parent="SpawnActor/StartSpawnActor"]
points = PoolVector2Array( 0, 0, 0, 0 )
width = 1.0
default_color = Color( 1, 1, 1, 1 )

[node name="EndSpawnActor" type="Area2D" parent="SpawnActor"]
position = Vector2( -9, 0 )

[node name="SprEndSpawnActor" type="Sprite" parent="SpawnActor/EndSpawnActor"]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="ColEndSpawnActor" type="CollisionShape2D" parent="SpawnActor/EndSpawnActor"]
shape = SubResource( 7 )

[node name="SetRun" type="Area2D" parent="."]
position = Vector2( 0, 18 )

[node name="SprSetRun" type="Sprite" parent="SetRun"]
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )

[node name="ColSetRun" type="CollisionShape2D" parent="SetRun"]
shape = SubResource( 5 )

[node name="StartSetRun" type="Area2D" parent="SetRun"]
position = Vector2( 9, 0 )

[node name="SprStartSetRun" type="Sprite" parent="SetRun/StartSetRun"]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="ColStartSetRun" type="CollisionShape2D" parent="SetRun/StartSetRun"]
shape = SubResource( 8 )

[node name="LineSetRun" type="Line2D" parent="SetRun/StartSetRun"]
points = PoolVector2Array( 0, 0, 0, 0 )
width = 1.0
default_color = Color( 1, 1, 1, 1 )

[node name="EndSetRun" type="Area2D" parent="SetRun"]
position = Vector2( -9, 0 )

[node name="SprEndSetRun" type="Sprite" parent="SetRun/EndSetRun"]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="ColEndSetRun" type="CollisionShape2D" parent="SetRun/EndSetRun"]
shape = SubResource( 9 )

[connection signal="input_event" from="BeginPlay/StartBeginPlay" to="." method="_on_StartBeginPlay_input_event"]
